seaqt/QtCore/gen_qiodevice.h

class QIODevice;
class QMetaObject;
class QObject;
typedef struct QEvent QEvent;
typedef struct QIODevice QIODevice;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
bool QIODevice_override_virtual_childEvent(void* self, intptr_t slot);
bool QIODevice_override_virtual_customEvent(void* self, intptr_t slot);
void QIODevice_virtualbase_customEvent(void* self, QEvent* event);
bool QIODevice_override_virtual_connectNotify(void* self, intptr_t slot);
void QIODevice_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QIODevice_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QIODevice_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QIODevice_staticMetaObject();
void QIODevice_delete(QIODevice* self);