seaqt/QtCore/gen_qiodevice.nim

proc fcQIODevice_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_childEvent".}
proc fQIODevice_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QIODevice_virtualbase_customEvent".}
proc fcQIODevice_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_customEvent".}
proc fQIODevice_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QIODevice_virtualbase_connectNotify".}
proc fcQIODevice_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_connectNotify".}
proc fQIODevice_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QIODevice_virtualbase_disconnectNotify".}
proc fcQIODevice_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_disconnectNotify".}
proc fcQIODevice_staticMetaObject(): pointer {.importc: "QIODevice_staticMetaObject".}
proc fcQIODevice_delete(self: pointer) {.importc: "QIODevice_delete".}


func init*(T: type gen_qiodevice_types.QIODevice, h: ptr cQIODevice): gen_qiodevice_types.QIODevice =
  T(h: h)
proc create*(T: type gen_qiodevice_types.QIODevice, ): gen_qiodevice_types.QIODevice =
  gen_qiodevice_types.QIODevice.init(fcQIODevice_new())

proc create*(T: type gen_qiodevice_types.QIODevice, parent: gen_qobject_types.QObject): gen_qiodevice_types.QIODevice =
  gen_qiodevice_types.QIODevice.init(fcQIODevice_new2(parent.h))

proc metaObject*(self: gen_qiodevice_types.QIODevice, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQIODevice_metaObject(self.h))

proc metacast*(self: gen_qiodevice_types.QIODevice, param1: cstring): pointer =
  fcQIODevice_metacast(self.h, param1)

proc metacall*(self: gen_qiodevice_types.QIODevice, param1: cint, param2: cint, param3: pointer): cint =
  fcQIODevice_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qiodevice_types.QIODevice, s: cstring): string =
  let v_ms = fcQIODevice_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc openMode*(self: gen_qiodevice_types.QIODevice, ): cint =
  cint(fcQIODevice_openMode(self.h))

proc setTextModeEnabled*(self: gen_qiodevice_types.QIODevice, enabled: bool): void =
  fcQIODevice_setTextModeEnabled(self.h, enabled)

proc isTextModeEnabled*(self: gen_qiodevice_types.QIODevice, ): bool =
  fcQIODevice_isTextModeEnabled(self.h)

proc isOpen*(self: gen_qiodevice_types.QIODevice, ): bool =
  fcQIODevice_isOpen(self.h)

proc isReadable*(self: gen_qiodevice_types.QIODevice, ): bool =
  fcQIODevice_isReadable(self.h)

proc isWritable*(self: gen_qiodevice_types.QIODevice, ): bool =
  fcQIODevice_isWritable(self.h)

proc isSequential*(self: gen_qiodevice_types.QIODevice, ): bool =
  fcQIODevice_isSequential(self.h)

proc readChannelCount*(self: gen_qiodevice_types.QIODevice, ): cint =
  fcQIODevice_readChannelCount(self.h)

proc writeChannelCount*(self: gen_qiodevice_types.QIODevice, ): cint =
  fcQIODevice_writeChannelCount(self.h)

proc currentReadChannel*(self: gen_qiodevice_types.QIODevice, ): cint =
  fcQIODevice_currentReadChannel(self.h)

proc setCurrentReadChannel*(self: gen_qiodevice_types.QIODevice, channel: cint): void =
  fcQIODevice_setCurrentReadChannel(self.h, channel)

proc currentWriteChannel*(self: gen_qiodevice_types.QIODevice, ): cint =
  fcQIODevice_currentWriteChannel(self.h)

proc setCurrentWriteChannel*(self: gen_qiodevice_types.QIODevice, channel: cint): void =
  fcQIODevice_setCurrentWriteChannel(self.h, channel)

proc open*(self: gen_qiodevice_types.QIODevice, mode: cint): bool =
  fcQIODevice_open(self.h, cint(mode))

proc close*(self: gen_qiodevice_types.QIODevice, ): void =
  fcQIODevice_close(self.h)

proc pos*(self: gen_qiodevice_types.QIODevice, ): clonglong =
  fcQIODevice_pos(self.h)

proc size*(self: gen_qiodevice_types.QIODevice, ): clonglong =
  fcQIODevice_size(self.h)

proc seek*(self: gen_qiodevice_types.QIODevice, pos: clonglong): bool =
  fcQIODevice_seek(self.h, pos)

proc atEnd*(self: gen_qiodevice_types.QIODevice, ): bool =
  fcQIODevice_atEnd(self.h)

proc reset*(self: gen_qiodevice_types.QIODevice, ): bool =
  fcQIODevice_reset(self.h)

proc bytesAvailable*(self: gen_qiodevice_types.QIODevice, ): clonglong =
  fcQIODevice_bytesAvailable(self.h)

proc bytesToWrite*(self: gen_qiodevice_types.QIODevice, ): clonglong =
  fcQIODevice_bytesToWrite(self.h)

proc read*(self: gen_qiodevice_types.QIODevice, data: cstring, maxlen: clonglong): clonglong =
  fcQIODevice_read(self.h, data, maxlen)

proc read*(self: gen_qiodevice_types.QIODevice, maxlen: clonglong): seq[byte] =
  var v_bytearray = fcQIODevice_readWithMaxlen(self.h, maxlen)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc readAll*(self: gen_qiodevice_types.QIODevice, ): seq[byte] =
  var v_bytearray = fcQIODevice_readAll(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc readLine*(self: gen_qiodevice_types.QIODevice, data: cstring, maxlen: clonglong): clonglong =
  fcQIODevice_readLine(self.h, data, maxlen)

proc readLine*(self: gen_qiodevice_types.QIODevice, ): seq[byte] =
  var v_bytearray = fcQIODevice_readLine2(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc canReadLine*(self: gen_qiodevice_types.QIODevice, ): bool =
  fcQIODevice_canReadLine(self.h)

proc startTransaction*(self: gen_qiodevice_types.QIODevice, ): void =
  fcQIODevice_startTransaction(self.h)

proc commitTransaction*(self: gen_qiodevice_types.QIODevice, ): void =
  fcQIODevice_commitTransaction(self.h)

proc rollbackTransaction*(self: gen_qiodevice_types.QIODevice, ): void =
  fcQIODevice_rollbackTransaction(self.h)

proc isTransactionStarted*(self: gen_qiodevice_types.QIODevice, ): bool =
  fcQIODevice_isTransactionStarted(self.h)

proc write*(self: gen_qiodevice_types.QIODevice, data: cstring, len: clonglong): clonglong =
  fcQIODevice_write(self.h, data, len)

proc write*(self: gen_qiodevice_types.QIODevice, data: cstring): clonglong =
  fcQIODevice_writeWithData(self.h, data)

proc write*(self: gen_qiodevice_types.QIODevice, data: seq[byte]): clonglong =
  fcQIODevice_write2(self.h, struct_miqt_string(data: cast[cstring](if len(data) == 0: nil else: unsafeAddr data[0]), len: csize_t(len(data))))

proc peek*(self: gen_qiodevice_types.QIODevice, data: cstring, maxlen: clonglong): clonglong =
  fcQIODevice_peek(self.h, data, maxlen)

proc peek*(self: gen_qiodevice_types.QIODevice, maxlen: clonglong): seq[byte] =
  var v_bytearray = fcQIODevice_peekWithMaxlen(self.h, maxlen)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc skip*(self: gen_qiodevice_types.QIODevice, maxSize: clonglong): clonglong =
  fcQIODevice_skip(self.h, maxSize)

proc waitForReadyRead*(self: gen_qiodevice_types.QIODevice, msecs: cint): bool =
  fcQIODevice_waitForReadyRead(self.h, msecs)

proc waitForBytesWritten*(self: gen_qiodevice_types.QIODevice, msecs: cint): bool =
  fcQIODevice_waitForBytesWritten(self.h, msecs)

proc ungetChar*(self: gen_qiodevice_types.QIODevice, c: cchar): void =
  fcQIODevice_ungetChar(self.h, c)

proc putChar*(self: gen_qiodevice_types.QIODevice, c: cchar): bool =
  fcQIODevice_putChar(self.h, c)

proc getChar*(self: gen_qiodevice_types.QIODevice, c: cstring): bool =
  fcQIODevice_getChar(self.h, c)

proc errorString*(self: gen_qiodevice_types.QIODevice, ): string =
  let v_ms = fcQIODevice_errorString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc readyRead*(self: gen_qiodevice_types.QIODevice, ): void =
  fcQIODevice_readyRead(self.h)

type QIODevicereadyReadSlot* = proc()
proc miqt_exec_callback_QIODevice_readyRead(slot: int) {.exportc.} =
  let nimfunc = cast[ptr QIODevicereadyReadSlot](cast[pointer](slot))
  nimfunc[]()

proc onreadyRead*(self: gen_qiodevice_types.QIODevice, slot: QIODevicereadyReadSlot) =
  var tmp = new QIODevicereadyReadSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQIODevice_connect_readyRead(self.h, cast[int](addr tmp[]))

proc channelReadyRead*(self: gen_qiodevice_types.QIODevice, channel: cint): void =
  fcQIODevice_channelReadyRead(self.h, channel)

type QIODevicechannelReadyReadSlot* = proc(channel: cint)
proc miqt_exec_callback_QIODevice_channelReadyRead(slot: int, channel: cint) {.exportc.} =
  let nimfunc = cast[ptr QIODevicechannelReadyReadSlot](cast[pointer](slot))
  let slotval1 = channel

  nimfunc[](slotval1)

proc onchannelReadyRead*(self: gen_qiodevice_types.QIODevice, slot: QIODevicechannelReadyReadSlot) =
  var tmp = new QIODevicechannelReadyReadSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQIODevice_connect_channelReadyRead(self.h, cast[int](addr tmp[]))

proc bytesWritten*(self: gen_qiodevice_types.QIODevice, bytes: clonglong): void =
  fcQIODevice_bytesWritten(self.h, bytes)

type QIODevicebytesWrittenSlot* = proc(bytes: clonglong)
proc miqt_exec_callback_QIODevice_bytesWritten(slot: int, bytes: clonglong) {.exportc.} =
  let nimfunc = cast[ptr QIODevicebytesWrittenSlot](cast[pointer](slot))
  let slotval1 = bytes

  nimfunc[](slotval1)

proc onbytesWritten*(self: gen_qiodevice_types.QIODevice, slot: QIODevicebytesWrittenSlot) =
  var tmp = new QIODevicebytesWrittenSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQIODevice_connect_bytesWritten(self.h, cast[int](addr tmp[]))

proc channelBytesWritten*(self: gen_qiodevice_types.QIODevice, channel: cint, bytes: clonglong): void =
  fcQIODevice_channelBytesWritten(self.h, channel, bytes)

type QIODevicechannelBytesWrittenSlot* = proc(channel: cint, bytes: clonglong)
proc miqt_exec_callback_QIODevice_channelBytesWritten(slot: int, channel: cint, bytes: clonglong) {.exportc.} =
  let nimfunc = cast[ptr QIODevicechannelBytesWrittenSlot](cast[pointer](slot))
  let slotval1 = channel

  let slotval2 = bytes

  nimfunc[](slotval1, slotval2)

proc onchannelBytesWritten*(self: gen_qiodevice_types.QIODevice, slot: QIODevicechannelBytesWrittenSlot) =
  var tmp = new QIODevicechannelBytesWrittenSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQIODevice_connect_channelBytesWritten(self.h, cast[int](addr tmp[]))

proc aboutToClose*(self: gen_qiodevice_types.QIODevice, ): void =
  fcQIODevice_aboutToClose(self.h)

type QIODeviceaboutToCloseSlot* = proc()
proc miqt_exec_callback_QIODevice_aboutToClose(slot: int) {.exportc.} =
  let nimfunc = cast[ptr QIODeviceaboutToCloseSlot](cast[pointer](slot))
  nimfunc[]()

proc onaboutToClose*(self: gen_qiodevice_types.QIODevice, slot: QIODeviceaboutToCloseSlot) =
  var tmp = new QIODeviceaboutToCloseSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQIODevice_connect_aboutToClose(self.h, cast[int](addr tmp[]))

proc readChannelFinished*(self: gen_qiodevice_types.QIODevice, ): void =
  fcQIODevice_readChannelFinished(self.h)

type QIODevicereadChannelFinishedSlot* = proc()
proc miqt_exec_callback_QIODevice_readChannelFinished(slot: int) {.exportc.} =
  let nimfunc = cast[ptr QIODevicereadChannelFinishedSlot](cast[pointer](slot))
  nimfunc[]()

proc onreadChannelFinished*(self: gen_qiodevice_types.QIODevice, slot: QIODevicereadChannelFinishedSlot) =
  var tmp = new QIODevicereadChannelFinishedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQIODevice_connect_readChannelFinished(self.h, cast[int](addr tmp[]))

proc tr*(_: type gen_qiodevice_types.QIODevice, s: cstring, c: cstring): string =
  let v_ms = fcQIODevice_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
